// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHoverEffectsBackgroundStyles Get a correct hover effects color background style 1`] = `
{
  "background": {
    "general": {
      "background-color": "rgb(255,99,71)",
    },
    "l": {
      "background-color": "rgb(255,99,71)",
    },
    "label": "Background Color",
    "m": {
      "background-color": "rgb(255,99,71)",
    },
    "s": {
      "background-color": "rgb(255,99,71)",
    },
    "xl": {
      "background-color": "rgb(255,99,71)",
    },
    "xs": {
      "background-color": "rgb(255,99,71)",
    },
    "xxl": {
      "background-color": "rgb(255,99,71)",
    },
  },
  "general": {},
}
`;

exports[`getHoverEffectsBackgroundStyles Get a correct hover effects gradient background style 1`] = `
{
  "background": {
    "general": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "l": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "label": "Background gradient",
    "m": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "s": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "xl": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "xs": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
    "xxl": {
      "background": "linear-gradient(135deg,rgba(6,147,200,0.4) 0%,rgba(224,82,100,0.8) 100%)",
    },
  },
  "general": {},
}
`;
